Fix user page display on mobile

--- a/packages/core/less/forum/UserCard.less
+++ b/packages/core/less/forum/UserCard.less
@@ -47,6 +47,7 @@
   margin-left: -130px;
 
   @media @phone {
+    display: block;
     float: none;
     margin: 0 auto 20px;
     width: 64px + 8px;
